# StoryCore

./: CMakeLists.txt  README.md
include/: AddItemEvent.hpp  Choice.hpp  ConsoleMessageEvent.hpp  ConsolePrintItemsEvent.hpp  ConsoleRenderer.hpp  Entity.hpp  Event.hpp  Game.hpp  GameState.hpp  HasItemCondition.hpp  ICondition.hpp  IRenderer.hpp  Room.hpp
include/Conditions/: HasItemCondition.hpp  NotCondition.hpp
include/Core/: Choice.hpp  Game.hpp  GameState.hpp  Item.hpp  Room.hpp
include/Events/: AddItemEvent.hpp  ConsoleMessageEvent.hpp  ConsolePrintItemsEvent.hpp
include/Interfaces/: ICondition.hpp  IEvent.hpp  IRenderer.hpp
include/Renderers/: ConsoleRenderer.hpp
src/: CMakeLists.txt  ConsoleRenderer.cpp  Entity.cpp  Game.cpp
tests/: CMakeLists.txt  main_tests.cpp
